style: fix z-index sidebar

--- a/client_lourd/src/app/components/layout/side-bar/side-bar.component.scss
+++ b/client_lourd/src/app/components/layout/side-bar/side-bar.component.scss
@@ -717,7 +717,7 @@ img.global-channels-icon {
     right: 0;
     bottom: 0;
     background-color: var(--primary-color);
-    z-index: 1000;
+    z-index: 10000;
 
     .search-friend-content {
         display: flex;
@@ -796,7 +796,7 @@ img.global-channels-icon {
     right: 0;
     bottom: 0;
     background-color: var(--primary-color);
-    z-index: 1000;
+    z-index: 10000;
 
     .friend-requests-content {
         display: flex;
@@ -930,7 +930,7 @@ img.global-channels-icon {
     width: 100%;
     height: 100%;
     background-color: var(--primary-color);
-    z-index: 1000;
+    z-index: 10000;
     display: flex;
     flex-direction: column;
 
